--- a/Peak Online/MainWindow.xaml
+++ b/Peak Online/MainWindow.xaml
@@ -1,34 +1,63 @@
 ﻿<Window x:Class="PeakOnline.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Peak Online" Height="524" Width="600" 
-        Background="Transparent" 
-        WindowStyle="None" 
-        AllowsTransparency="True"
-        MouseDown="Window_MouseDown">
+        Title="Peak Online Players" Height="600" Width="500" 
+        ResizeMode="NoResize" WindowStyle="None"
+        MouseLeftButtonDown="Window_MouseLeftButtonDown"
+        Icon="pack://application:,,,/peak.png">
 
-    <Border Background="#D0E0F0" CornerRadius="10" Padding="10">
-        <StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <!-- Close Button -->
-                <Button Name="BtnClose" Click="BtnClose_Click" Width="30" Height="30" 
-                        Background="Red" Foreground="White" Content="X" 
-                        FontWeight="Bold" FontSize="14" Margin="5"/>
+    <Border CornerRadius="20">
+        <Border.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="DarkGreen" Offset="0.0"/>
+                <GradientStop Color="yellow" Offset="1.0"/>
+            </LinearGradientBrush>
+        </Border.Background>
+
+        <Grid x:Name="MainGrid">
+            <!-- Define Rows for Layout -->
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <!-- For the header with the close button -->
+                <RowDefinition Height="*"/>
+                <!-- For the rest of the content -->
+            </Grid.RowDefinitions>
+
+            <!-- Header with Close Button -->
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="0" Margin="0 10">
+                <Button Content="X" Click="BtnClose_Click" Width="30" Height="30" Background="Red" Foreground="White" />
             </StackPanel>
-            <TextBlock Text="Select Log File" FontSize="16" FontWeight="Bold" Foreground="Black" Margin="0,0,0,10"/>
-            <Button Name="BtnSelectFile" Click="BtnSelectFile_Click" Margin="0,0,0,10" Width="100" Background="#A4C8E1" FontFamily="Tahoma" FontWeight="Bold" Foreground="White">
-                Select File
-            </Button>
-            <ListBox Name="LstFilePaths" SelectionChanged="LstFilePaths_SelectionChanged" Margin="0,0,0,10" Height="100" Background="#E0E0E0" />
-            <Button Name="BtnResetHistory" Click="BtnResetHistory_Click" Width="100" Background="#A4C8E1" FontFamily="Tahoma" FontWeight="Bold" Foreground="White">
-                Reset History
-            </Button>
-            <ComboBox Name="CmbBackgroundColor" SelectionChanged="CmbBackgroundColor_SelectionChanged" Margin="0,10,0,0">
-                <ComboBoxItem Content="LightBlue"/>
-                <ComboBoxItem Content="LightGreen"/>
-                <ComboBoxItem Content="LightCoral"/>
-            </ComboBox>
-            <Canvas Name="GraphCanvas" Height="230" Background="White" Margin="0,10,0,0"/>
-        </StackPanel>
+
+            <!-- Main Content -->
+            <StackPanel Grid.Row="1" Margin="10">
+                <Button Content="Select File" Click="BtnSelectFile_Click" HorizontalAlignment="Center" Margin="0 10"/>
+                <TextBox x:Name="TxtFilePath" TextWrapping="Wrap" IsReadOnly="True" Margin="0 10"/>
+                <ListBox x:Name="LstFilePaths" SelectionChanged="LstFilePaths_SelectionChanged" Margin="0 10"/>
+
+                <StackPanel Orientation="Horizontal" Margin="0 10">
+                    <Label Content="Corner Colour:" VerticalAlignment="Center"/>
+                    <ComboBox x:Name="CmbBackgroundColor" SelectionChanged="CmbBackgroundColor_SelectionChanged" Margin="5">
+                        <ComboBoxItem Content="DarkGreen"/>
+                        <ComboBoxItem Content="LightBlue"/>
+                        <ComboBoxItem Content="White"/>
+                        <ComboBoxItem Content="LightGray"/>
+                        <ComboBoxItem Content="Salmon"/>
+                        <ComboBoxItem Content="LightCoral"/>
+                        <ComboBoxItem Content="MediumSeaGreen"/>
+                        <ComboBoxItem Content="DodgerBlue"/>
+                        <ComboBoxItem Content="Gold"/>
+                        <ComboBoxItem Content="Purple"/>
+                        <ComboBoxItem Content="DarkOrange"/>
+                        <ComboBoxItem Content="Tomato"/>
+                    </ComboBox>
+                </StackPanel>
+
+                <Button Content="Reset Data History" Click="BtnResetHistory_Click" HorizontalAlignment="Center" Margin="0 10"/>
+                <Canvas x:Name="GraphCanvas" Height="250" Margin="0 20" Background="LightGray"/>
+            </StackPanel>
+
+            <!-- Add the icon to the top left corner -->
+            <Image Source="peak.png" Width="40" Height="40" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10"/>
+        </Grid>
     </Border>
 </Window>
